--- a/.github/workflows/dependency-review.yaml
+++ b/.github/workflows/dependency-review.yaml
@@ -21,7 +21,7 @@ jobs:
               uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
               with:
                   disable-sudo: true
-                  egress-policy: block
+                  egress-policy: audit
                   allowed-endpoints: >
                       api.github.com:443
                       api.securityscorecards.dev:443
