--- a/REUSE.toml
+++ b/REUSE.toml
@@ -158,3 +158,9 @@ path = "styles/**/*.txt"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2022 - 2025 Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"
 SPDX-License-Identifier = "CC0-1.0"
+
+[[annotations]]
+path = ".yamllint.yaml"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2022 - 2025 Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"
+SPDX-License-Identifier = "CC0-1.0"
