--- a/mise.toml
+++ b/mise.toml
@@ -51,117 +51,5 @@ NODE_ENV = "development"
 # =============================================================================
 # Task Definitions
 # =============================================================================
-# Core tasks for GitHub Action development
-
-# -----------------------------------------------------------------------------
-# Primary Tasks
-# -----------------------------------------------------------------------------
-
-[tasks.build]
-description = "Build and verify the action distribution"
-run = "pnpm run package"
-depends = ["_install"]
-
-[tasks.test]
-description = "Run tests with coverage"
-run = "pnpm run test:coverage"
-depends = ["_install"]
-
-[tasks.dev]
-description = "Development mode with tests in watch"
-run = "pnpm exec vitest"
-depends = ["_install"]
-
-[tasks.lint]
-description = "Check code quality (format + lint + types)"
-depends = ["_install"]
-run = """
-#!/usr/bin/env bash
-set -e
-pnpm run format:check
-pnpm run lint:check
-pnpm exec tsc --noEmit
-"""
-
-[tasks.fix]
-description = "Auto-fix formatting and linting issues"
-depends = ["_install"]
-run = """
-#!/usr/bin/env bash
-pnpm run format:write
-pnpm run lint:fix
-"""
-
-[tasks.ci]
-description = "Full CI pipeline (lint, test, build, verify dist)"
-depends = ["lint", "test", "build", "check-dist"]
-
-# -----------------------------------------------------------------------------
-# Action-Specific Tasks
-# -----------------------------------------------------------------------------
-
-[tasks."action:test"]
-description = "Test the built action locally (default: 1-10s)"
-run = "INPUT_MINIMUM=1 INPUT_MAXIMUM=10 node dist/index.cjs"
-depends = ["build"]
-
-[tasks."action:test:custom"]
-description = "Test action with custom params: mise run action:test:custom -- MIN MAX"
-run = "INPUT_MINIMUM=${1:-1} INPUT_MAXIMUM=${2:-10} node dist/index.cjs"
-depends = ["build"]
-
-[tasks."check-dist"]
-description = "Verify dist/ is up-to-date (critical for GitHub Actions)"
-depends = ["_install"]
-run = """
-#!/usr/bin/env bash
-set -e
-echo "🔨 Building fresh distribution..."
-pnpm run package
-if [[ -n "$(git status --porcelain dist/)" ]]; then
-  echo "❌ dist/ is out of date! Run 'mise run build' and commit changes."
-  git diff dist/
-  exit 1
-fi
-echo "✅ dist/ is up-to-date"
-"""
-
-# -----------------------------------------------------------------------------
-# Documentation Tasks
-# -----------------------------------------------------------------------------
-
-[tasks.docs]
-description = "Serve documentation locally"
-run = "mdbook serve guide --open"
-
-[tasks."docs:build"]
-description = "Build documentation"
-run = "mdbook build guide"
-
-# -----------------------------------------------------------------------------
-# Maintenance Tasks
-# -----------------------------------------------------------------------------
-
-[tasks.clean]
-description = "Clean build artifacts"
-run = "rm -rf dist/ coverage/ node_modules/.vite .rollup.cache guide/book"
-
-[tasks.setup]
-description = "Initial project setup"
-run = "pnpm install"
-
-[tasks.update]
-description = "Update dependencies"
-run = "pnpm update --latest"
-
-[tasks.audit]
-description = "Security audit"
-run = "pnpm audit"
-
-# -----------------------------------------------------------------------------
-# Internal Tasks
-# -----------------------------------------------------------------------------
-
-[tasks._install]
-description = "Install dependencies (internal)"
-run = "pnpm install"
+# All tasks are defined as executable files in .mise/tasks/
+# Run `mise tasks ls` to see all available tasks
