--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,24 +1,25 @@
-# SPDX-FileCopyrightText: 2022 - 2025 Ali Sajid Imami
+# SPDX-FileCopyrightText: 2022 - 2026 Ali Sajid Imami
 #
 # SPDX-License-Identifier: MIT
-
+---
 branches:
-  - main
-  - name: next
-    prerelease: true
+    - main
+    - name: next
+      prerelease: true
 plugins:
-  - "@semantic-release/commit-analyzer"
-  - "@semantic-release/release-notes-generator"
-  - - "@semantic-release/npm"
-    - npmPublish: false
-  - - "@semantic-release/git"
-    - assets: ["CHANGELOG.md", "package.json", "package-lock.json", "dist/*.js"]
-      message: 'chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}'
-  - - "@semantic-release/github"
-    - assets:
-        - path: "dist/index.js"
-          label: "JavaScript bundle"
-          name: "random-wait-action-${nextRelease.version}.js"
-        - path: "dist/attestation.jsonl"
-          label: "Attestation file"
-          name: "attestation-${nextRelease.version}.jsonl"
+    - '@semantic-release/commit-analyzer'
+    - '@semantic-release/release-notes-generator'
+    - - '@semantic-release/npm'
+      - npmPublish: false
+    - - '@semantic-release/git'
+      - assets:
+            ['CHANGELOG.md', 'package.json', 'package-lock.json', 'dist/*.js']
+        message: 'chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}'
+    - - '@semantic-release/github'
+      - assets:
+            - path: 'dist/index.js'
+              label: 'JavaScript bundle'
+              name: 'random-wait-action-${nextRelease.version}.js'
+            - path: 'dist/attestation.jsonl'
+              label: 'Attestation file'
+              name: 'attestation-${nextRelease.version}.jsonl'
