--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -118,7 +118,7 @@ jobs:
                   install_args: --yes
 
             - name: Generate Coverage Report
-              run: mise run test
+              run: mise run coverage
 
             - name: Upload results to Codecov
               uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5
