--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -118,6 +118,8 @@ jobs:
                   install_args: --yes
 
             - name: Generate Coverage Report
+              env:
+                  MISE_VERBOSE: 1
               run: mise run coverage
 
             - name: Upload results to Codecov
